# 6s894_project_2025

./: .envrc  .gitignore  README.md  environment.yml  pyproject.toml  rebuild.sh
HadaCore/: pyproject.toml  setup.py  test.py
bench/: bench.py
csrc/: .clang-format  .clangd  README.md  cuda_utils.h  defs.cuh  defs.h  dtype.h  frag.cuh  hada.cuh  hada_handler.cu  hada_handler.cuh  hadamard_transform.cpp  hadamard_transform_cuda.cu  main.cu  main.cuh  pyproject.toml  setup.py  test_bit.cu  test_frag.cu  utils.cuh
docs/: impl_notes_11_19.md
fused_ht/: benchmark_sweep.py  fusion_pipelined.cu  fwht_gemv_fusion.cu  plot_results.py
test/: test_bit.py  test_mma.py
