[project]
name = "project"
version = "0.1.0"
description = "6.s894 final project"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
  "cappa>=0.30.4",
  "numpy>=2.3.4",
  "pip>=25.3",
  "psutil>=7.1.3",
  "scipy>=1.16.3",
  "torch>=2.9.1",
  #
  "fast-hadamard-transform",
  "hada_core",
]

[tool.uv.sources]
fast-hadamard-transform = { git = "https://github.com/Dao-AILab/fast-hadamard-transform.git" }
hada_core = { path = "./HadaCore" }

[dependency-groups]
dev = [
  "autoflake>=2.3.1",
  "basedpyright>=1.33.0",
  "black>=25.11.0",
  "isort>=7.0.0",
  "pyright>=1.1.407",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
treat_all_comments_as_code = true
force_single_line = true
group_by_package = true

[tool.pyright]
exclude = [".venv"]
